.apex/src/objects/PurchaseLine__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <label>ItemId</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>PurchaseLines</relationshipLabel>
        <relationshipName>PurchaseLines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseId__c</fullName>
        <label>PurchaseId</label>
        <referenceTo>Purchase__c</referenceTo>
        <relationshipLabel>PurchaseLines</relationshipLabel>
        <relationshipName>PurchaseLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <formula>UnitCost__c * Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>UnitCost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PurchaseLine</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PurchaseLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>